tests/cases/compiler-development/artifact/errors/diagnostic-trait-qualified-associated-missing-self.diagnostic
diagnostic error code=T0001 family=type message="trait-qualified associated function call 'Build::build' requires an explicit implementing type argument" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/traits/errors/trait-qualified-associated-missing-self.ari" display="tests/cases/traits/errors/trait-qualified-associated-missing-self.ari" bytes=225
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/trait-qualified-associated-missing-self.ari" line=16 column=13 end_line=16 end_column=18 byte_start=194 byte_end=199 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/trait-qualified-associated-missing-self.ari:16:13\n    |\n 16 |   let box = Build::build(1);\n    |             ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/traits/errors/trait-qualified-associated-missing-self.ari" line=2 column=6 end_line=2 end_column=11 byte_start=19 byte_end=24 message="associated function 'Build::build' is declared here"
  Snippet label=1 text="  --> tests/cases/traits/errors/trait-qualified-associated-missing-self.ari:2:6\n   |\n 2 |   fn build(value: i64) -> Self\n   |      ^^^^^"
  Note index=0 location=none message="associated trait functions without a receiver need an implementing Self type"
  Help index=0 location=none message="provide an explicit implementing type argument such as 'Build::build<T>(...)'"
